@@ -1,33 +1,31 @@
 package com.jsconf.rocketlaptop.security.jwt;
 
 import com.jsconf.rocketlaptop.domain.member.model.Member;
+import lombok.Builder;
 import lombok.Getter;
-import lombok.RequiredArgsConstructor;
 import lombok.ToString;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.util.CollectionUtils;
 
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
+@Builder
 @ToString
-@RequiredArgsConstructor
 public class MemberDetails implements UserDetails {
     private final Member member;
-    private final List<String> memberRoles;
+
+    public MemberDetails(Member member) {
+        this.member = member;
+    }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        if (CollectionUtils.isEmpty(memberRoles)) return Collections.emptyList();
-
-        return memberRoles.stream()
-                .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                .collect(Collectors.toList());
+        return Arrays.stream(member.getRole().split(","))
+                .map(role -> new SimpleGrantedAuthority(("ROLE_" + role)))
+                .toList();
     }
 
     @Override
